HEAD
	+ New APT log at /var/log/ebox/software.log to diagnose problems
	+ Handle SIGPIPE in ebox-apt-remove
	+ Delete /var/lib/ebox/dpkg_running inupdate and remove scripts
	+ Handle possible errors opening write fifo
2.0.6
	+ Always regenerate APT cache for installing or upgrading
	+ Do not download all the packages, just download needed ones
2.0.5
	+ Improved performance using global package cache
	+ Show a helpful page if there are half-installed packages
2.0.4
	+ Fixed defunct process due to uncaught SIGPIPE
	+ Always end safely the installation of packages regardless of any
	  error
	+ Wait for the child ending when installing packages
	+ Include as Zentyal component the ones that start with "zentyal-"
2.0.3
	+ Do not check archive if the version list if it was installed
	  manually or the archive is missing (Fixed a warning)
	+ Fixed a bug in error management in ebox-apt-update and
	  ebox-update-packages scripts
	+ Fixed bug setting automatic time
2.0.2
	+ Use icons for Security and QA updates in System updates
	  (libebox >= 2.0.3)
	+ Bugfix: Do not show + icon in system updates if there is not
	  changelog entry
	+ Bugfix: When QA is enabled and exclusive, do not show not qa
	  packages to upgrade
	+ Bugfix: Zentyal components to update based on QA data as well
	+ Bugfix: Return right properties for security and QA when available
	+ Remove useless calls to regen a cache that does not longer exist
	  for Zentyal components
	+ Return the Zentyal packages when listUpgradablePkgs is called
	  with excludeEBoxPackages off, this makes Zentyal components be
	  updated by ebox-software if automatic updates are set
	+ Bugfix: Remove deprecated parameter in listEBoxPkgs method
2.0.1
	+ Unknown packages are considered as uninstalled
	+ Set a random automatic time when there is not stored any
	  configured time by admin
	+ Not launching an exception when ebox-software is locked in the
	  System page
1.5.6
	+ Update list button gives feedback about the result now